revert print log issue code